Fix overlapping and tags hover color

--- a/themes/gokarna/static/css/dark.css
+++ b/themes/gokarna/static/css/dark.css
@@ -1,7 +1,7 @@
 :root {
   --dark-bg-color: 18, 18, 18;
   --dark-text-color: white;
-  --dark-tags-bg-color: #1f1f1f;
+  --dark-tags-bg-color: #444444;
   --dark-header-divider-color: #484848;
 }
 
@@ -29,7 +29,7 @@ a:hover .feather-moon {
 
 .post-tags .post-tag:hover {
   background-color: var(--dark-text-color);
-  color: rgb(--dark-bg-color);
+  color: rgb(var(--dark-bg-color));
 }
 
 .tags-list .post-tags .post-tag a .tag-posts-count {
@@ -38,7 +38,7 @@ a:hover .feather-moon {
 
 .tags-list .post-tags .post-tag:hover a .tag-posts-count {
   background-color: var(--dark-text-color);
-  color: rgb(--dark-bg-color);
+  color: rgb(var(--dark-bg-color));
 }
 
 .footer {
